src/builder/tests/snapshots/ciboulette2postgres__builder__tests__simple_select__all.snap
---
source: src/builder/tests/simple_select.rs
expression: res

---
(
    "SELECT * FROM \"public\".\"cte_main_insert\"",
    Ciboulette2SqlArguments {
        inner: [],
    },
)
