src/builder/tests/snapshots/ciboulette2postgres__builder__tests__simple_select__simple.snap
---
source: src/builder/tests/simple_select.rs
expression: res

---
(
    "SELECT \"public\".\"cte_main_insert\".\"first-name\", \"public\".\"cte_main_insert\".\"last-name\" FROM \"public\".\"cte_main_insert\"",
    Ciboulette2SqlArguments {
        inner: [],
    },
)
